Fixed overlap on MyList

--- a/src/components/includes/MyList.css
+++ b/src/components/includes/MyList.css
@@ -6,3 +6,7 @@ ul {
     list-style-type: none;
     padding: 0;
 }
+
+.MyList {
+	width: 98%;
+}
